--- a/web-component/public/index.html
+++ b/web-component/public/index.html
@@ -14,6 +14,7 @@
     <script src="//unpkg.com/@webcomponents/webcomponentsjs@2.4.3/bundles/webcomponents-sd-ce.js"></script>
   </head>
   <body>
+    <h1>웹 컴포넌트로 작성된 Todo 앱 입니다.</h1>
     <todo-app></todo-app>
   </body>
 </html>
